// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/storybook/ Wagtail features BOLD 1`] = `
Array [
  Object {
    "data": Object {},
    "depth": 0,
    "entityRanges": Array [],
    "inlineStyleRanges": Array [
      Object {
        "length": 4,
        "offset": 0,
        "style": "BOLD",
      },
    ],
    "text": "Bold",
    "type": "unstyled",
  },
]
`;

exports[`/storybook/ Wagtail features BR 1`] = `
Object {
  "blocks": Array [
    Object {
      "data": Object {},
      "depth": 0,
      "entityRanges": Array [],
      "inlineStyleRanges": Array [],
      "text": "Hel
lo",
      "type": "unstyled",
    },
  ],
  "entityMap": Object {},
}
`;

exports[`/storybook/ Wagtail features HORIZONTAL_RULE 1`] = `
Object {
  "blocks": Array [
    Object {
      "data": Object {},
      "depth": 0,
      "entityRanges": Array [
        Object {
          "key": 0,
          "length": 1,
          "offset": 0,
        },
      ],
      "inlineStyleRanges": Array [],
      "text": " ",
      "type": "atomic",
    },
    Object {
      "data": Object {},
      "depth": 0,
      "entityRanges": Array [],
      "inlineStyleRanges": Array [],
      "text": "",
      "type": "unstyled",
    },
  ],
  "entityMap": Object {
    "0": Object {
      "data": Object {},
      "mutability": "IMMUTABLE",
      "type": "HORIZONTAL_RULE",
    },
  },
}
`;

exports[`/storybook/ Wagtail features IMAGE 1`] = `
Object {
  "blocks": Array [
    Object {
      "data": Object {},
      "depth": 0,
      "entityRanges": Array [],
      "inlineStyleRanges": Array [],
      "text": "",
      "type": "unstyled",
    },
    Object {
      "data": Object {},
      "depth": 0,
      "entityRanges": Array [
        Object {
          "key": 0,
          "length": 1,
          "offset": 0,
        },
      ],
      "inlineStyleRanges": Array [],
      "text": " ",
      "type": "atomic",
    },
    Object {
      "data": Object {},
      "depth": 0,
      "entityRanges": Array [],
      "inlineStyleRanges": Array [],
      "text": "",
      "type": "unstyled",
    },
  ],
  "entityMap": Object {
    "0": Object {
      "data": Object {
        "alt": "",
        "src": "/static/example-lowres-image.jpg",
      },
      "mutability": "MUTABLE",
      "type": "IMAGE",
    },
  },
}
`;

exports[`/storybook/ Wagtail features LINK 1`] = `
Object {
  "blocks": Array [
    Object {
      "data": Object {},
      "depth": 0,
      "entityRanges": Array [
        Object {
          "key": 0,
          "length": 4,
          "offset": 0,
        },
      ],
      "inlineStyleRanges": Array [],
      "text": "Link",
      "type": "unstyled",
    },
  ],
  "entityMap": Object {
    "0": Object {
      "data": Object {
        "url": "http://www.example.com/",
      },
      "mutability": "MUTABLE",
      "type": "LINK",
    },
  },
}
`;

exports[`/storybook/ Wagtail features header-three 1`] = `
Array [
  Object {
    "data": Object {},
    "depth": 0,
    "entityRanges": Array [],
    "inlineStyleRanges": Array [],
    "text": "H3",
    "type": "header-three",
  },
]
`;

exports[`/storybook/ Wagtail features unordered-list-item 1`] = `
Array [
  Object {
    "data": Object {},
    "depth": 0,
    "entityRanges": Array [],
    "inlineStyleRanges": Array [],
    "text": "UL",
    "type": "unordered-list-item",
  },
]
`;
